Use XDG_CURRENT_DESKTOP to determine if the desktop environment is Unity

chrome_views_delegate_linux.cc used to ask libunity if it was running
to determine if the desktop environment is Unity.  This is incorrect
because other environments might use libunity (eg. for download
progress indicators).  Instead, check if XDG_CURRENT_DESKTOP indicates
the environment is Unity.

This CL's behavior differs from the way GTK checks if it needs to
remove the frame buttons.  The way canonical achieved this is with an
Ubuntu-specific GTK patch.  Unity adds _UNITY_SHELL to _NET_WM_HINTS,
and the patched GTK checks if that hint is set on the root window that
contains the GTK window.  This solution is more correct than what this
CL does because it handles the case where chrome is launched with
"DISPLAY=:1 google-chrome-stable", where display :1 might be running a
different environment than the display Chrome was launched from.
However, this hint is only set on GTK 3.18+, but we still support
Trusty (maximized GTK windows on Trusty do not remove the frame
buttons), so we're forced to use the XDG_CURRENT_DESKTOP solution.

This CL:
* Removes LinuxUi::UnityIsRunning.
* Uses the XDG_CURRENT_DESKTOP solution in
  chrome_views_delegate_linux.cc
* Adds a TODO for when we'll be able to use the _UNITY_SHELL solution.

BUG=594490
R=erg@chromium.org

Change-Id: I4922e5e3283f4549209bd27218a7032842219d6a